# Maze

./: .gitignore  README.md  install.sh  main.py  maze-runner  plan.md  pyproject.toml  requirements.txt
maze/: __init__.py  helper.py  helper_client.py
maze-aur/: .SRCINFO  PKGBUILD  maze.install
maze/core/: engine.py  events.py  profile.py
maze/detection/: arp_watch.py  dns_validator.py  rogue_ap.py  ssl_strip.py  tls_monitor.py
maze/gui/: app.py  app_state.py  dashboard.py  i18n.py  icons.py  privilege.py  theme.py  tray.py
maze/gui/widgets/: connection_map.py  dashboard_view.py  device_list.py  event_list.py  firewall_view.py  module_status.py  profile_dialog.py  settings_view.py  threat_level.py
maze/network/: nm_watcher.py
maze/protection/: dns_leak.py  firewall.py  port_scanner.py  process_map.py
maze/stealth/: fingerprint.py  hostname_hide.py  mac_changer.py  service_blocker.py
maze/utils/: config.py  logger.py  network_info.py  recon.py
scripts/: setup-daemon.sh
tests/: test_detections.py
