[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "maze"
version = "0.1.0"
description = "Maze Network — Public WiFi güvenlik aracı: MITM tespiti, MAC randomization, firewall otomasyonu"
requires-python = ">=3.11"
dependencies = [
    "scapy>=2.5.0",
    "httpx>=0.27.0",
    "PyQt6>=6.6.0",
    "qasync>=0.27.0",
    "dbus-python>=1.3.2",
]

[project.scripts]
maze = "maze.gui.app:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["maze*"]
